# notabene-cli

./: .gitignore  .readthedocs.yaml  Makefile  README.md  environment.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: code-quality.yaml  env-tests.yaml  pipeline.yaml  platform-tests.yaml  publish-pypi.yaml
docs/: api.rst  cli.rst  conf.py  contributing.rst  getting_started.rst  index.rst  licenses.rst  quickstart.rst  requirements.rst
docs/development/: actions.rst  getting_started.rst  initial_setup.rst  make.rst
notabene/: __init__.py  base.py  cli.py  template.py  utils.py
notabene/templates/: __init__.py  exploratory_data_analysis.ipynb
tests/: test_base.py  test_cli.py  test_example.py  test_template.py  test_version.py  testing_utils.py
tests/data/test_template/notebooks/: test_eda.ipynb  test_eda_no_match.ipynb
tests/data/test_template/templates/: exploratory_data_analysis.ipynb
