[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=notabene"
testpaths = [
    "tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.flake8]
statistics = true
max-line-length = 88
extend-gnore = [
    "E203",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
py_version = 38

[tool.coverage.run]
data_file = "build/.coverage"

[tool.coverage.html]
directory = "build/coverage"
