[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=notabene"
testpaths = [
    "tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox-conda
envlist = py36, py37, py38

[testenv]
deps =
    pytest-cov
    pytest
commands =
    pytest
"""

[tool.coverage.run]
data_file = "build/.coverage"
branch = true

[tool.coverage.report]
fail_under = 95

[tool.coverage.html]
directory = "build/coverage"

[tool.flake8]
statistics = true
max-line-length = 88
extend-gnore = [
    "E203",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
py_version = 38
